# flowdiscovery-digital-rock

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  MAINTAINERS.md  Pipfile  README.md  Vagrantfile
cmake/: clean-cmake.cmake  clean-debug.cmake  clean-docs.cmake  clean-results.cmake
cmake/Modules/: FindGlog.cmake  FindGperftools.cmake  FindTCLAP.cmake
src/: main.cc  main.h
src/cluster_label/: cluster_label.cc  cluster_label.h
src/cmdline_parser/: cmdline_parser.cc  cmdline_parser.h
src/digital_rock/: digital_rock.cc  digital_rock.h
src/exec_manager/: algorithm_json.h  config_reader.cc  config_reader.h  exec_manager.cc  exec_manager.h  morphology_config.h  segmentation_config.h  setup_config.h
src/json_parser/: json_parser.cc  json_parser.h
src/morphology/: morphology.cc  morphology.h
src/segmentation/: global_segmentation.cc  global_segmentation.h  segmentation_utils.cc  segmentation_utils.h
src/skeleton/: centerline_includes.h  skeleton_family.h  skeletonizer_by_ift.h  skeletonizer_key.h
src/skeleton/annotations/: annotation.h  annotation_status.h
src/skeleton/centerline/: centerline.h  centerline_builder.h  centerline_calculator.h  centerline_centerpoint_discoverer.h  centerline_set.h  gradient.h  maximal_clusters_discoverer.h  memory_graph_builder.h  speed_graph_builder.h  vertex.h  vertex_neighbour_calculator.h  weight_calculator.h
src/skeleton/contours/: contour_calculator.h
src/skeleton/graph/: annotated_vertex_helper.cc  annotated_vertex_helper.h  dijkstra.h  memory_graph.h  speed_graph.h  speed_graph_iterator.h
src/skeleton/heaps/: binary_heap.h  handle_based_binary_heap.h
src/skeleton/images/: annotated_image.h  arma_2d_binary_image_builder.h  arma_2d_i_image_builder.h  arma_3d_binary_image_builder.h  binary_image.h  image.h  image_iterator.h  integer_image.h  ternary_image.h
src/skeleton/neighbours/: eight_neighbour_calculator.h  four_neighbour_calculator.h  six_neighbour_calculator.h  twenty_six_neighbour_calculator.h
src/skeleton/network/: link.h  network.h  network_builder.h  node.h
src/skeleton/paths/: quadratic_path_calculator.h
src/skeleton/points/: pixel.h  point.h  point_builder.h  point_builder_base.h  voxel.h
src/skeleton/utils/: annotated_image_binary_exporter.h  annotated_image_json_exporter.h  comparer.h  default_comparer.h  default_reader.h  file_utils.h  hasher.h  i_equatable.h  i_hashable.h
test/: main_test.cc
test/src/config_reader/: config_reader_tests.h
test/src/config_reader/input/: morphology_config.json  segmentation_config.json  setup_config.json
test/src/morphology/: fractal_dimension_tests.h  surface_to_volume_tests.h
test/src/segmentation/: global_segmentation_tests.h  helper_segmentation_tests.h
test/src/segmentation/input/: README.md  cameraman.tif  lena_gray_512.tif  livingroom.tif  mandril_gray.tif  pirate.tif  woman_blonde.tif  woman_darkhair.tif
test/src/skeleton/: annotated_image_test.h  arma_2d_image_builder_test.h  binary_heap_test.h  binary_image_test.h  centerline_test.h  commons.h  contour_calculator_integrated_test.h  dijkstra_test.h  four_neighbour_calculator_test.h  gradient_test.h  image__image_iterator_point_test.h  image_iterator_test.h  image_test.h  network_link_test.h  network_node_test.h  network_test.h  point_builder_test.h  point_test.h  quadratic_path_calculator_test.h  six_neighbour_calculator_test.h  twenty_six_neighbour_calculator_test.h
test/src/skeleton/input/: binary_image.raw
test/src/utils/: geometry_utils.h  segmentation_test_utils.h  test_utils.h
util/: capillary_bundle.py  capillary_network.py  config_schema.json  config_template.json  json_graph_schema.json  plot_centerlines.py  plot_fractal.py  plot_histogram.py  plot_stats.py  tif2raw.cc
